# instrumentRs

./: .gitignore  .pre-commit-config.yaml  CHANELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml  release-plz.yml
agilent/agilent_4uhv/: Cargo.toml  README.md
agilent/agilent_4uhv/examples/: serial-agilent4uhv.rs  tcpip-agilent4uhv.rs  tcpip-rs485-agilent4uhv.rs
agilent/agilent_4uhv/src/: cmd_package.rs  lib.rs  read_package.rs  utils.rs
agilent/agilent_4uhv/tests/: test_agilent4uhv.rs
demos/: README.md
demos/rp235x/serial_demo/: Cargo.toml  README.md
demos/rp235x/serial_demo/.cargo/: config.toml
demos/rp235x/serial_demo/src/: main.rs
digoutbox/: Cargo.toml  README.md
digoutbox/examples/: serial-blocking.rs
digoutbox/src/: lib.rs
docs/design_decisions/: v0.1.0.md
examples/: README.md
examples/threading_std/: Cargo.toml  README.md
examples/threading_std/src/: main.rs
instrumentRs/: CHANGELOG.md  Cargo.toml  README.md
instrumentRs/src/: instrument.rs  lib.rs  loopback.rs  serial.rs  tcp_ip.rs
instrumentRs/src/loopback/: loopback_interface_bytes.rs  loopback_interface_string.rs  mod.rs
instrumentRs/tests/: test_instrument.rs  test_instrument_interface.rs  test_loopback.rs  test_loopback_bytes.rs  test_loopback_string.rs  test_serial.rs
lakeshore/lakeshore_336/: Cargo.toml  README.md
lakeshore/lakeshore_336/examples/: serial-lakeshore336.rs
lakeshore/lakeshore_336/src/: lib.rs
lakeshore/lakeshore_336/tests/: test_lakeshore336.rs
other/digoutbox/: CHANGELOG.md  Cargo.toml
other/digoutbox/examples/: serial-digoutbox.rs
other/digoutbox/src/: lib.rs
other/digoutbox/tests/: test_digoutbox.rs
pfeiffer/omnicontrol/: Cargo.toml  LICENSE-MIT  README.md
pfeiffer/omnicontrol/src/: cmd_package.rs  lib.rs  lib_utils.rs  package_utils.rs  read_package.rs
pfeiffer/omnicontrol/tests/: test_omnicontrol.rs
pfeiffer/tpg36x/: CHANGELOG.md  Cargo.toml  README.md
pfeiffer/tpg36x/examples/: serial-tpg36x.rs  tcpip-tpg36x.rs
pfeiffer/tpg36x/src/: ethernet_conf.rs  lib.rs  status.rs  units.rs
pfeiffer/tpg36x/tests/: test_tpg36x.rs
sunpower/cryotelgt/: Cargo.toml  README.md
sunpower/cryotelgt/src/: interface.rs  lib.rs
sunpower/cryotelgt/tests/: test_cryotelgt.rs
template/: Cargo.toml  LICENSE-MIT  README.md  cargo-generate.toml
template/src/: lib.rs
template/tests/: test_{{ device | downcase }}.rs
