[workspace]
resolver = "3"
package.version = "0.1.0"
package.authors = ["Reto Trappitsch <reto@galactic-forensics.space>"]
package.edition = "2024"
package.license = "MIT OR Apache-2.0"
members = ["instrumentRs", "other/digoutbox", "pfeiffer/tpg36x"]
exclude = ["demos", "demos/*", "examples", "examples/*", "template", "template/*"]

[workspace.dependencies]
measurements    = "0.11.0"
serialport      = "4.7.2"
rstest          = "0.25.0"
