[package]
name = "instrumentrs"
version = "0.1.0"
authors = ["Reto Trappitsch <reto@galactic-forensics.space>"]
edition.workspace = true
license.workspace = true
repository = "https://github.com/trappitsch/instrumentRs/tree/main/instrumentRs"
description = "A library for standardized control of (scientific) instruments from Rust."

[dependencies]
thiserror       = "2.0.12"
serialport      = { workspace = true, optional = true }

[dev-dependencies]
rstest          = { workspace = true }

[features]
serial = ["serialport"]
