[package]
name = "agilent_4uhv"
version = "0.1.0"
authors = ["Reto Trappitsch <reto@galactic-forensics.space>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A library to control the Agilent 4UHV vacuum gauge controller from Rust using `instrumentRs`."

[dependencies]
instrumentrs    = { version = "0.1.0", path = "../../instrumentRs", features = ["serial"] }
measurements    = { workspace = true, features = ["std"] }

[dev-dependencies]
rstest          = { workspace = true }
