[package]
name = "lakeshore_336"
version = "0.1.0"
authors = ["Reto Trappitsch <reto@galactic-forensics.space>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A library to control a Lakeshore 336 temperature controller from Rust using `instrumentRs`."

[dependencies]
instrumentrs    = { version = "0.1.0", path = "../../instrumentRs", features = ["serial"] }
measurements    = { workspace = true, features = ["std"] }
serialport      = { workspace = true }

[dev-dependencies]
rstest          = { workspace = true }
