[package]
name = "digoutbox"
version = "0.1.0"
authors = ["Reto Trappitsch <reto@galactic-forensics.space>"]
edition.workspace = true
license.workspace = true
repository = "https://github.com/trappitsch/instrumentRs/tree/main/other/digoutbox"
description = "A library to contral a DigOutBox from Rust using `instrumentRs`."

[dependencies]
critical-section = { version = "1.2.0", features = ["std"] }
instrumentrs    = { version = "0.1.0", path = "../../instrumentRs", features = ["serial"] }

[dev-dependencies]
rstest          = { workspace = true }
serialport      = { workspace = true }
